fixed footnots text-align

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -305,7 +305,6 @@ sup {
 	font-size: 0.7em;
 	margin-top: 100px;
 	padding-bottom: 10px;
-	text-align: left !important;
 	font-family: mono-space, 'Courier New', Courier, monospace;
 	color: $dark-grey;
 
@@ -331,6 +330,10 @@ sup {
 		position: absolute;
 		text-align: right;
 		width: 40px;
+	}
+
+	& p {
+		text-align: left !important;
 	}
 }
   
